5-security-group.tf
resource "aws_security_group" "alb-security-group" {
  name = "ALB Security Group"
  description = "Enable HTTP/HTTPS access on Port 80/443"
  vpc_id = aws_vpc.vpc.id

  ingress {
    description      = "HTTP Access"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "HTTPS Access"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
      description      = "SSH Access"
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      security_groups = ["${aws_security_group.ssh-security-group.id}"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
      "Name" = "ALB Security Group"
  }
}

resource "aws_security_group" "ssh-security-group" {
  name = "SSH Security Group"
  description = "Enable SSH access on Port 22"
  vpc_id = aws_vpc.vpc.id

  ingress {
    description      = "SSH Access"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["${var.ssh-location}"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
      "Name" = "SSH Security Group"
  }
}

resource "aws_security_group" "webserver-security-group" {
    name = "webserver-security-group"
    description = "Enable HTTP/HTTPS access on Port 80/443 via ALB and SSH access on Port 22 via SSH SG"
    vpc_id = aws_vpc.vpc.id

    ingress {
        description      = "HTTP Access"
        from_port        = 80
        to_port          = 80
        protocol         = "tcp"
        security_groups = ["${aws_security_group.alb-security-group.id}"]
    }

    ingress {
        description      = "HTTPS Access"
        from_port        = 443
        to_port          = 443
        protocol         = "tcp"
        security_groups = ["${aws_security_group.alb-security-group.id}"]
    }
    ingress {
        description      = "SSH Access"
        from_port        = 22
        to_port          = 22
        protocol         = "tcp"
        security_groups = ["${aws_security_group.ssh-security-group.id}"]
    }

    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]
    }

    tags = {
        "Name" = "Web Server Security Group"
    }
  
}

resource "aws_security_group" "database-security-group" {
    name = "Database Security Group"
    description = "Enable MYSQL/Aurora access on Port 3306"
    vpc_id = aws_vpc.vpc.id

    ingress {
        description      = "MYSQL/Aurora Access"
        from_port        = 3306
        to_port          = 3306
        protocol         = "tcp"
        security_groups  = ["${aws_security_group.webserver-security-group.id}"]
    }
    ingress {
        description      = "SSH Access"
        from_port        = 22
        to_port          = 22
        protocol         = "tcp"
        security_groups = ["${aws_security_group.ssh-security-group.id}"]
    }
    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]
    }

    tags   = {
        Name = "Database Security Group"
    }
  
}

resource "aws_security_group" "redis-security-group" {
    name = "Redis Security Group"
    description = "Enable redis access on Port 6379"
    vpc_id = aws_vpc.vpc.id

    ingress {
        description      = "MYSQL/Aurora Access"
        from_port        = 6379
        to_port          = 6379
        protocol         = "tcp"
        security_groups  = ["${aws_security_group.webserver-security-group.id}"]
    }
    ingress {
        description      = "SSH Access"
        from_port        = 22
        to_port          = 22
        protocol         = "tcp"
        security_groups = ["${aws_security_group.ssh-security-group.id}"]
    }
    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]
    }

    tags   = {
        Name = "Redis Security Group"
    }
  
}
